Fixed size of content section on mobile Fixed zooming on mobile

--- a/less/content_section.less
+++ b/less/content_section.less
@@ -1,6 +1,9 @@
 .content-section {
     position: relative;
+    display: inline-block;
+    &:extend(.centered-h);
     margin: 25px 0;
+    width: 85%;
 
     .back-button {
         margin: 10px 0;
@@ -25,7 +28,7 @@
         text-align: center;
 
         img {
-            max-width: 90%;
+            max-width: 95%;
         }
     }
 
